crates/swc_ecma_parser/tests/test262-error-references/fail/dc431bcf293513a0.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/dc431bcf293513a0.js:1:4
  |
1 | (')
  |    ^

